syntax = "proto3";

import "google/protobuf/empty.proto";

package HelloWorld;

option csharp_namespace = "HelloWorldService";

// The helloWorld service definition.
service HelloWorld {

  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc JustSayHello(HelloRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
